--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -19,3 +19,6 @@ jobs:
           echo "Hello world from ${{ github..actor }}"
           echo "Current branch is ${{ github.ref }}"
       - shell: bash # optional. bash is default for non-windows platforms
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+      - run: tree #display files in repo after checking them out
