--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Greet the user
         run: | # starts a multiline block
-          echo "Hello world from ${{ github..actor }}"
+          echo "Hello world from ${{ github.actor }}"
           echo "Current branch is ${{ github.ref }}"
         shell: bash # optional. bash is default for non-windows platforms
       - name: Checkout
