--- a/.github/workflows/DevelopInBranch.yml
+++ b/.github/workflows/DevelopInBranch.yml
@@ -15,4 +15,5 @@ jobs:
                 echo "Workflow triggered by actor '${{ github.actor }}'"
             - uses: actions/checkout@v4.1.0
             - uses: devops-actions/actionlint@v0.1.2
+            - run: echo "${{ github.event.pull_request.title }}"
             
